# bitstew

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  linux-st.yml  linux.yml  macos-st.yml  macos.yml
cmake.modules/: configure-platform.cmake  configure-target.cmake  update-files.sh
include/: assert.hpp  config.hpp  pimpl.hpp  platform.hpp  preprocessor.hpp
include/containers/: README.md  guarded_sequence_container.hpp  iterator.hpp  view.hpp
include/meta/: forwards.hpp  library_config.hpp  meta.hpp  meta_api.hpp  object.hpp  object_extension.hpp  safe_queue.hpp  threading.hpp
include/meta/arguments/: argument.hpp  argument_type.hpp  argument_type_impl.hpp  packaged_arguments.hpp
include/meta/cache/: lru_cache.hpp  ttl_clock.hpp
include/meta/containers/: guarded_sequence_container.hpp  iterator.hpp  view.hpp
include/meta/detail/: lru_cache.hpp  packaged_arguments.hpp  safe_queue.hpp
include/meta/log/: trace.hpp  trace_output.hpp  trace_printer.hpp
include/meta/metadata/: callable.hpp  callable_impl.hpp  factory.hpp  invokable.hpp  invokable_impl.hpp  meta_object.hpp  metaclass.hpp  metaclass_impl.hpp  metaobject.hpp
include/meta/object_extensions/: connection.hpp  data_extension.hpp  data_extensions_object.hpp  executable_extension.hpp  executable_extensions_object.hpp  invokable.hpp  object_extension.hpp  signal.hpp
include/meta/signal/: signal.hpp  slot.hpp
include/meta/tasks/: job.hpp  task.hpp  task_scheduler.hpp  thread_pool.hpp  worker.hpp
include/meta/thread_pool/: thread_pool.hpp
include/meta/utility/: algorithm.hpp  concepts.hpp  lockable.hpp  reference_counted.hpp  type_traits.hpp
include/stew/: forwards.hpp  library_config.hpp  object.hpp  safe_queue.hpp  stew.hpp  stew_api.hpp
include/stew/arguments/: README.md  argument.hpp  packaged_arguments.hpp
include/stew/arguments/detail/: packaged_arguments.hpp
include/stew/cache/: lru_cache.hpp  ttl_clock.hpp
include/stew/containers/: guarded_sequence_container.hpp  iterator.hpp  view.hpp
include/stew/core/: pimpl.hpp
include/stew/detail/: lru_cache.hpp  packaged_arguments.hpp
include/stew/dynamic_type/: bad_variable_exception.hpp  exceptions.hpp  packaged_arguments.hpp  type_converter.hpp  type_info.hpp  type_operators.hpp  type_registry.hpp  variable.hpp
include/stew/log/: trace.hpp  trace_printer.hpp
include/stew/meta/: README.md  object.hpp
include/stew/meta/metadata/: factory.hpp  meta_object.hpp  metaclass.hpp  metaclass_impl.hpp
include/stew/meta/object_extensions/: connection.hpp  invokable.hpp  object_extension.hpp  signal.hpp
include/stew/metadata/: meta_object.hpp  metaclass.hpp  metaclass_impl.hpp
include/stew/object_extensions/: invokable.hpp  object_extension.hpp
include/stew/standalone/cache/: README.md  lru_cache.hpp
include/stew/standalone/cache/detail/: lru_cache.hpp
include/stew/standalone/container/: README.md  guarded_sequence_container.hpp  iterator.hpp  safe_queue.hpp  view.hpp
include/stew/standalone/container/detail/: safe_queue.hpp
include/stew/standalone/utility/: README.md  algorithm.hpp  concepts.hpp  lockable.hpp  reference_counted.hpp  scope_value.hpp
include/stew/tasks/: job.hpp  thread_pool.hpp
include/stew/utility/: concepts.hpp  function_traits.hpp  lockable.hpp  reference_counted.hpp  type_traits.hpp
include/stew/variable/: packaged_arguments.hpp  type_info.hpp  variable.hpp
include/utils/: concepts.hpp  container_view.hpp  function_traits.hpp  guarded_sequence_container.hpp  lockable.hpp  reference_counted.hpp  scope_value.hpp  type_traits.hpp  utility.hpp  vector.hpp
src/: CMakeLists.txt  files.cmake  object.cpp  object_extension.cpp  template.cpp  threading.cpp
src/arguments/: argument.cpp  argument_type.cpp  packaged_arguments.cpp
src/dynamic_type/: argument.cpp  bad_variable_exception.cpp  core.cpp  exceptions.cpp  packaged_arguments.cpp  type_converter.cpp  type_info.cpp  type_operators.cpp  type_registry.cpp  variable.cpp
src/log/: filelist.cmake  trace.cpp  trace_output.cpp  trace_printer.cpp
src/metadata/: callable.cpp  factory.cpp  invokable.cpp  metaclass.cpp  metaobject.cpp
src/object_extensions/: data_extension.cpp  data_extensions_object.cpp  executable_extension.cpp  executable_extensions_object.cpp  object_extension.cpp  signal.cpp
src/private/: object.hpp  thread_pool.hpp
src/signal/: signal.cpp  signal_private.h  slot.cpp
src/tasks/: job.cpp  task.cpp  task_scheduler.cpp  task_scheduler_private.h  thread_pool.cpp  worker.cpp
src/thread_pool/: thread_pool.cpp
src/variable/: argument.cpp  packaged_arguments.cpp  type_info.cpp  variable.cpp
tests/: CMakeLists.txt  files.cmake  test-callable.cpp  test_argument_type.cpp  test_guarded_sequence_container.cpp  test_invokable.cpp  test_log.cpp  test_log_fixtures.hpp  test_lru_cache.cpp  test_main.cpp  test_meta_class.cpp  test_meta_class_fixtures.hpp  test_meta_object.cpp  test_object.cpp  test_object_extension.cpp  test_signal_slot.cpp  test_signals.cpp  test_thread_pool.cpp  test_utils.hpp  test_variable.cpp
tests/utils/: domain_test_environment.hpp  trace_printer_mock.hpp
